<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="bib">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

    <string name="spotify_toast">This Button will launch Spotify Streamer App!</string>
    <string name="scores_toast">This Button will launch Scores App!</string>
    <string name="library_toast">This Button will launch Library App!</string>
    <string name="bib_toast">This Button will launch Build it Bigger App!</string>
    <string name="xyz_toast">This Button will launch XYZ Reader App!</string>
    <string name="capstone_toast">This Button will launch My Capstone App!</string>


    <string name="action_settings">Settings</string>
</resources>
